# kuma-collar

./: Cargo.toml  Embed.toml
src/: main.rs  patterns.rs
