[package]
name = "kuma"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "0.1.2"
cortex-m = "0.6"
cortex-m-rt = "0.6"
panic-reset = "0.1.0"
rtt-target = {version = "0.2.0", features = ["cortex-m"] }
ws2812-spi = "0.3.0"
smart-leds-trait = "0.2.0"
smart-leds = "0.3.0"

rand_chacha = { version = "0.2.2", default-features = false }
rand = { version = "0.7.3", default-features = false }
libm = "0.2.1"

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f411"] # replace the model of your microcontroller here

[profile.release]
panic = "abort"
